@@ -1,6 +1,6 @@
 package org.closure.MMirror.controllers;
 
-import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.servlet.ServletRequest;
@@ -39,7 +39,7 @@ public class EventCotroller {
         try {
             return ResponseEntity.status(HttpStatus.OK).body(eventService.getEvents(userID));
         } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.OK).body(Stream.of(e.getMessage()).toList());
+            return ResponseEntity.status(HttpStatus.OK).body(Stream.of(e.getMessage()).collect(Collectors.toList()));
         }
     }
 }
